fixed menu z-index and added more margin to number

--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -5,6 +5,7 @@
 #site-header {
     box-shadow: 0 1px 0 rgba(0,0,0,.1);
     position:fixed;
+    z-index:10;
     top:0;
     width:100%;
     background:white;
