--- a/assets/sass/partials/_home.scss
+++ b/assets/sass/partials/_home.scss
@@ -283,7 +283,7 @@
     background-image: linear-gradient(180deg,rgba(33,122,206,0.7) 0%,rgba(102,204,251,0.63) 100%),url(../images/alex.jpg);
     background-position:center;
     background-size: cover;
-    margin-top:$su*4;
+    margin-top:$su*6;
     color:white;
     padding:$su*2 0;
     display:flex;
